# brickmap-vulkan

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmakelists.txt
apps/brickmap-vulkan/cfg/: settings.json
cmake_modules/: app.cmake  dependencies.cmake  shader_compile.cmake
code/: CMakeLists.txt
code/apps/: apps.pch.h  cmakelists.txt
code/apps/brickmap-vulkan/: CMakeLists.txt  brickmap_vulkan.cpp  brickmap_vulkan.h
code/modules/: CMakeLists.txt
code/modules/engine/: CMakeLists.txt  cmakelists.txt  engine.pch.h  main.h
code/modules/engine/apps/: app.cpp  app.h  vulkan_app.cpp  vulkan_app.h
code/modules/engine/containers/: deletion_queue.h  service_locator.h
code/modules/engine/hash/: hash_utils.h
code/modules/engine/imgui/: imgui_context.cpp  imgui_context.h
code/modules/engine/log/: critical_sink.h
code/modules/engine/stage/: camera.cpp  camera.h
code/modules/engine/strings/: string_utils.h
code/modules/engine/voxel/: ray_tracer.cpp  ray_tracer.h  world.cpp  world.h
code/modules/engine/vulkan/: buffer.cpp  buffer.h  cache_keys.cpp  cache_keys.h  descriptors.cpp  descriptors.h  device_context.cpp  device_context.h  frame.cpp  frame.h  image.cpp  image.h  initializers.cpp  initializers.h  (+14 more)
code/shaders/: CMakeLists.txt  blit.frag  common_brickmap.glsl  common_random.glsl  common_raytrace.glsl  common_sunsky.glsl  common_variables.glsl  fullscreen.vert  ray_tracer_visualizer.frag  ray_tracer_visualizer.vert  rt_0_primary_rays.comp  rt_1_update_global_state.comp  rt_2_extend.comp  rt_3_shade.comp  rt_4_connect.comp  world_upload_bricks.comp
